<resources>
    <string name="app_name">BeCom</string>
    <string name="currency">$</string>
    <string name="content_description">image</string>
    <string name="title_login">Login</string>
    <string name="et_hint_email_id" translatable="false">email</string>
    <string name="et_hint_password">password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_and_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">Create an account</string>
    <string name="hint_last_name">last name</string>
    <string name="hint_first_name">first name</string>
    <string name="et_hint_confirm_password">confirm password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Conditions </u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="err_msg_enter_first_name">please enter first name</string>
    <string name="err_msg_enter_last_name">please enter last name</string>
    <string name="err_msg_enter_email">please enter email</string>
    <string name="err_msg_enter_password">please enter password</string>
    <string name="err_msg_enter_confirm_password">please enter confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">password and confirm password does not match</string>
    <string name="err_msg_agree_terms_and_condition">please agree to terms and conditions</string>
    <string name="msg_valid_input">your data is valid</string>
    <string name="please_wait">please wait&#8230;</string>
    <string name="msg_register_success">You have registered successfully!</string>
    <string name="err_msg_login">Failed to login!</string>
    <string name="title_forgot_password">Forgot password?</string>
    <string name="forgot_password_title_description">Enter your e-mail address and we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="msg_email_sent_success">Email sent successfully</string>
    <string name="et_hint_mobile_number">mobile number</string>
    <string name="title_complete_profile">Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="btn_lbl_save">Save</string>
    <string name="rb_lbl_male">Male</string>
    <string name="rb_lbl_female">Female</string>
    <string name="storage_permission_granted">You already have the storage permission</string>
    <string name="read_storage_permission_denied">You have to enable storage permissions from settings</string>
    <string name="image_selection_failed">Failed to load the image!</string>
    <string name="err_msg_enter_mobile_number">Please enter an mobile number</string>
    <string name="msg_profile_update_success">Profile updated successfully</string>
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="action_add_product">Add a product</string>
    <string name="title_add_product">Add product</string>
    <string name="et_hint_product_title">product title</string>
    <string name="et_hint_product_price">product price ($)</string>
    <string name="et_hint_product_description">product description</string>
    <string name="et_hint_product_quantity">product quantity</string>
    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>
    <string name="product_uploaded_success_message">Your product has uploaded successfully.</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>
    <string name="product_delete_success_message">Your product is deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_product_details">Product Details</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="btn_lbl_add_to_cart">Add to cart</string>
    <string name="success_message_item_added_to_cart">Product was added to your cart.</string>
    <string name="btn_lbl_go_to_cart">Go to cart</string>
    <string name="title_my_cart">My cart</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="lbl_out_of_stock">Out of stock</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>
    <string name="title_address_list">Address list</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>
    <string name="title_add_address">Add Address</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_office">Office</string>
    <string name="lbl_other">Other</string>
    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>
    <string name="err_your_address_added_successfully">Your address is added successfully.</string>
    <string name="title_edit_address">Edit address</string>
    <string name="btn_lbl_update">Update</string>
    <string name="msg_your_address_updated_successfully">Your address is updated successfully.</string>
    <string name="err_your_address_deleted_successfully">Your address is deleted successfully.</string>
    <string name="title_select_address">Select address</string>
    <string name="title_checkout">Checkout</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">Place Order</string>
    <string name="no_orders_placed_yet">No orders placed yet!</string>
    <string name="title_my_order_details">My Order Details</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order Id</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>
    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="title_sold_products">Sold Products</string>
    <string name="no_products_sold_out_yet">No products sold out yet!</string>
    <string name="title_sold_product_details">Sold Product Details</string>
    <string name="msg_success_order">Your order was placed successfully!</string>

</resources>